index finished with 1 bug
Index content, links to different pages, core layout complete. Added image banner2.png. bug with html bar showing with horizontal scroll

--- a/main.css
+++ b/main.css
@@ -6,19 +6,28 @@ img#logoSmall {
     width: 10%;
 }
 
+img#banner2 {
+    width: 100%;
+}
+
 div#logo {
     float: left;
     width: 50%;
+    top: 0;
 }
 
 div#login {
     float: right;
     padding-top: .5%;
     padding-right: .5%;
+    position: top;
+    margin-top: 4em;
 }
 
-nav {
-    clear: both;
+.navbar {
+    position: fixed;
+    top: 2;
+    width: 100%;
 }
 
 .col-centered {
@@ -33,3 +42,7 @@ img#arrow {
     margin-left: 40%;
 }
 
+body {
+    background-color: orange;
+    width: 100%;
+}
